# webui-llm-proxy

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: restart.bat  start.bat  status.bat  stop.bat
tests/: conftest.py  test_adapters.py  test_api.py  test_clients.py  test_core.py
webui_llm_proxy/: __main__.py  config.py
webui_llm_proxy/adapters/: base.py  models.py  openai.py
webui_llm_proxy/api/: dependencies.py  server.py
webui_llm_proxy/api/routes/: chat.py  debug.py  memory.py  models.py  upload.py
webui_llm_proxy/browser/: controller.py
webui_llm_proxy/cli/: debug_selectors.py  server.py
webui_llm_proxy/clients/: base.py  factory.py  gemini.py  kimi.py  pool.py
webui_llm_proxy/core/: detection_strategies.py  event_bus.py  media_extractor.py  memory.py  usage_logger.py
